# FreshBasket-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  build_files.sh  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
apps/home/: urls.py  views.py
apps/orders/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py  0002_order_transaction_id_and_more.py  0003_alter_orderitem_product_and_more.py  0003_order_delivery_area.py  0004_alter_address_address_alter_address_city_and_more.py  0004_remove_orderitem_product_name_orderitem_product.py  0005_order_note.py  0005_rename_total_price_order_subtotal.py  0006_deliverypartnerprofile_alter_order_delivery_partner_and_more.py  0006_order_tracking_code.py  0007_alter_address_user_alter_address_unique_together.py  0007_order_latitude_order_longitude.py  0008_alter_address_unique_together_alter_address_user.py  0008_deliverypartnerlocation.py  0009_alter_order_subtotal.py  0009_orderlivelocation_and_more.py  0010_alter_order_latitude_alter_order_longitude.py  0011_alter_order_latitude_alter_order_longitude.py
apps/products/: admin.py  custom_pagination.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
config/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
templates/: 404.html
(+15 files in other folders)
