[project]
name = "freshbasket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "channels>=4.3.2",
    "channels-redis==4.2.0",
    "cloudinary>=1.44.2",
    "dj-database-url>=3.1.2",
    "dj-rest-auth[with-social]>=7.2.0",
    "django==6.0",
    "django-cleanup>=9.0.0",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-resized>=1.0.3",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "redis==5.0.1",
    "sslcommerz-lib>=1.0",
    "uvicorn[standard]>=0.50.0",
    "whitenoise>=6.12.0",
]
